feat(observability): add MODEL_CALL, TOKEN_USAGE, MEMORY_UPDATED observations and enrich existing ones
Add 4 new ObservationType values (MODEL_CALL_STARTED/FINISHED, TOKEN_USAGE_RECORDED,
MEMORY_UPDATED), enrich ERROR with classification (errorType/recoverable), enrich
SESSION_STARTED with model name, and unify token usage into the observation flow.

Also fix 3 pre-existing IT failures caused by the WRITE_TO_TMP feature (commit 1fde48b)
which changed how reproducible tool outputs are handled — update assertions in
FileOperationsIT, TruncationIT, and MemoryAndContextIT to match the new behavior.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>